--- a/style.css
+++ b/style.css
@@ -17,15 +17,24 @@ body {
 }
 .grid {
   display: grid;
-  grid-template-columns: repeat(30, 1fr);
+  grid-template-columns: repeat(25, 1fr);
 }
 .grid .tile {
   width: 3rem;
   height: 3rem;
   border: 0.1rem solid rgb(102, 102, 105);
   background-color: rgb(245, 241, 242);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 .grid .tile.obstacle {
   background-color: rgb(24, 22, 23);
+}
+.tile.neighbour {
+  background-color: rgb(107, 96, 96);
+}
+.tile.start {
+  background-color: rgb(30, 134, 30);
+}
+.tile.end {
+  background-color: rgb(134, 30, 30);
 }
